--- a/js-basics-ivan/index.html
+++ b/js-basics-ivan/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello world</h1>
 
-    <script src="index-controlFlow.js"></script>
+    <script src="index-controlFlow-exercises.js"></script>
 </body>
 </html>
