cambio de lib script

--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>Hello World</h1>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-  <script src="index.js"></script>
+  <script src="../js-basics/objects/10-showPrimes.js"></script>
 </body>
 </html>
